--- a/lang/it_IT.lang
+++ b/lang/it_IT.lang
@@ -73,10 +73,10 @@ myst.creative.notebook.modbiome=Modificatori, biomi
 myst.creative.notebook.modblock=Modificatori, blocco
 myst.creative.notebook.modcolor=Modificatori, colori
 myst.creative.notebook.populators=Popolatori
-myst.creative.notebook.terrainalts=Altrerazioni terreno
+myst.creative.notebook.terrainalts=Alterazioni terreno
 myst.creative.notebook.terrain=Paesaggio del mondo
 myst.creative.notebook.visuals=Visuali
-myst.creative.notebook.weather=Tempo attmosferico
+myst.creative.notebook.weather=Tempo atmosferico
 
 fluid.myst.ink.black=Inchiostro nero
 tile.myst.fluid.myst.ink.black.name=Inchiostro nero
