Adds Color and new feature filler symbols to localization

--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -142,6 +142,9 @@ myst.symbol.EnvExplosions.name=Spontaneous Explosions
 myst.symbol.EnvLightning.name=Lightning
 myst.symbol.EnvMeteor.name=Meteors
 myst.symbol.EnvScorch.name=Scorched Surface
+myst.symbol.FeatureLargeDummy.name=Lacking Large Features
+myst.symbol.FeatureMediumDummy.name=Lacking Medium Features
+myst.symbol.FeatureSmallDummy.name=Lacking Small Features
 myst.symbol.Flat.name=Flat World
 myst.symbol.FloatIslands.name=Floating Islands
 myst.symbol.GenSpikes.name=Spikes
@@ -153,6 +156,22 @@ myst.symbol.LightingDark.name=Dark Lighting
 myst.symbol.LightingNormal.name=Normal Lighting
 myst.symbol.Mineshafts.name=Mineshafts
 myst.symbol.ModClear.name=Clear Modifiers
+myst.symbol.ModColorMaroon=Maroon Color
+myst.symbol.ModColorRed=Red Color
+myst.symbol.ModColorOlive=Olive Color
+myst.symbol.ModColorYellow=Yellow Color
+myst.symbol.ModColorDarkGreen=Dark Green Color
+myst.symbol.ModColorGreen=Green Color
+myst.symbol.ModColorTeal=Teal Color
+myst.symbol.ModColorCyan=Cyan Color
+myst.symbol.ModColorNavy=Navy Color
+myst.symbol.ModColorBlue=Blue Color
+myst.symbol.ModColorPurple=Purple Color
+myst.symbol.ModColorMagenta=Magenta Color
+myst.symbol.ModColorBlack=Black Color
+myst.symbol.ModColorGrey=Grey Color
+myst.symbol.ModColorSilver=Silver Color
+myst.symbol.ModColorWhite=White Color
 myst.symbol.ModGradient.name=Gradient
 myst.symbol.MoonDark.name=Dark Moon
 myst.symbol.MoonNormal.name=Normal Moon
