--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -74,8 +74,7 @@ myst.creative.notebook.modbasic=Modifikatoren: Grundlegendes
 myst.creative.notebook.modbiome=Modifikatoren: Biome
 myst.creative.notebook.modblock=Modifikatoren: Blöcke
 myst.creative.notebook.modcolor=Modifikatoren: Farben
-myst.creative.notebook.populators=Populatoren
-myst.creative.notebook.terrainalts=Terrainveränderungen
+myst.creative.notebook.features=Welt-Features
 myst.creative.notebook.terrain=Welt-Landschaften
 myst.creative.notebook.visuals=Visuelles
 myst.creative.notebook.weather=Wetter
@@ -143,6 +142,9 @@ myst.symbol.EnvExplosions.name=Spontane Explosionen
 myst.symbol.EnvLightning.name=Blitz und Donner
 myst.symbol.EnvMeteor.name=Meteore
 myst.symbol.EnvScorch.name=Versengte Oberfläche
+myst.symbol.FeatureLargeDummy.name=Fehlende Große Features
+myst.symbol.FeatureMediumDummy.name=Fehlende Mäßige Features 
+myst.symbol.FeatureSmallDummy.name=Fehlende Kleine Features
 myst.symbol.Flat.name=Flache Welt
 myst.symbol.FloatIslands.name=Schwebende Inseln
 myst.symbol.GenSpikes.name=Stacheln
@@ -154,6 +156,22 @@ myst.symbol.LightingDark.name=Dunkles Licht
 myst.symbol.LightingNormal.name=Normales Licht
 myst.symbol.Mineshafts.name=Minenschächte
 myst.symbol.ModClear.name=Modifizierungen entfernen
+myst.symbol.ModColorMaroon=Kastanienbraune Farbe
+myst.symbol.ModColorRed=Rote Farbe
+myst.symbol.ModColorOlive=Olivgrüne Farbe
+myst.symbol.ModColorYellow=Gelbe Farbe
+myst.symbol.ModColorDarkGreen=Dunkelgrüne Farbe
+myst.symbol.ModColorGreen=Grüne Farbe
+myst.symbol.ModColorTeal=Blaugrüne Farbe
+myst.symbol.ModColorCyan=Türkise Farbe
+myst.symbol.ModColorNavy=Marinblaue Farbe
+myst.symbol.ModColorBlue=Blaue Farbe
+myst.symbol.ModColorPurple=Violette Farbe
+myst.symbol.ModColorMagenta=Magenta Farbe
+myst.symbol.ModColorBlack=Schwarze Farbe
+myst.symbol.ModColorGrey=Graue Farbe
+myst.symbol.ModColorSilver=Silberne Farbe
+myst.symbol.ModColorWhite=Weiße Farbe
 myst.symbol.ModGradient.name=Farbverlauf
 myst.symbol.MoonDark.name=Dunkler Mond
 myst.symbol.MoonNormal.name=Normaler Mond
