--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -82,6 +82,9 @@ myst.creative.notebook.weather=Weather
 fluid.myst.ink.black=Black Ink
 tile.myst.fluid.myst.ink.black.name=Black Ink
 
+advancements.myst.root.title=Mystcraft
+advancements.myst.root.description=
+
 achievement.myst.symbol=Small Step of the Journey
 achievement.myst.symbol.desc=Find a Symbol
 achievement.myst.write=The Art: A Primer
@@ -110,101 +113,103 @@ instability.bonus.troll.left=%s has left the age.  The stability penalty will sl
 myst.symbol.biome.wrapper=%s Biome
 myst.symbol.block.wrapper=%s Block
 
-myst.symbol.BioConGrid.name=Grid-form Biome Distribution
-myst.symbol.BioConHuge.name=Huge Biome Distribution
-myst.symbol.BioConLarge.name=Large Biome Distribution
-myst.symbol.BioConMedium.name=Medium Biome Distribution
-myst.symbol.BioConNative.name=Native Biome Distribution
-myst.symbol.BioConSingle.name=Single Biome Distribution
-myst.symbol.BioConSmall.name=Small Biome Distribution
-myst.symbol.BioConTiled.name=Tiled Biome Distribution
-myst.symbol.BioConTiny.name=Tiny Biome Distribution
-myst.symbol.Caves.name=Caves
-myst.symbol.ColorCloud.name=Cloud Color
-myst.symbol.ColorCloudNat.name=Natural Cloud Color
-myst.symbol.ColorFog.name=Fog Color
-myst.symbol.ColorFogNat.name=Natural Fog Color
-myst.symbol.ColorFoliage.name=Foliage Color
-myst.symbol.ColorFoliageNat.name=Natural Foliage Color
-myst.symbol.ColorGrass.name=Grass Color
-myst.symbol.ColorGrassNat.name=Natural Grass Color
-myst.symbol.ColorHorizon.name=Sunset Color
-myst.symbol.ColorSky.name=Sky Color
-myst.symbol.ColorSkyNat.name=Natural Sky Color
-myst.symbol.ColorSkyNight.name=Night Sky Color
-myst.symbol.ColorWater.name=Water Color
-myst.symbol.ColorWaterNat.name=Natural Water Color
-myst.symbol.CryForm.name=Crystalline Formations
-myst.symbol.DenseOres.name=Dense Ores
-myst.symbol.Dungeons.name=Dungeons
-myst.symbol.EnvAccel.name=Accelerated
-myst.symbol.EnvExplosions.name=Spontaneous Explosions
-myst.symbol.EnvLightning.name=Lightning
-myst.symbol.EnvMeteor.name=Meteors
-myst.symbol.EnvScorch.name=Scorched Surface
-myst.symbol.FeatureLargeDummy.name=Lacking Large Features
-myst.symbol.FeatureMediumDummy.name=Lacking Medium Features
-myst.symbol.FeatureSmallDummy.name=Lacking Small Features
-myst.symbol.Flat.name=Flat World
-myst.symbol.FloatIslands.name=Floating Islands
-myst.symbol.GenSpikes.name=Spikes
-myst.symbol.HugeTrees.name=Huge Trees
-myst.symbol.LakesDeep.name=Deep Lakes
-myst.symbol.LakesSurface.name=Surface Lakes
-myst.symbol.LightingBright.name=Bright Lighting
-myst.symbol.LightingDark.name=Dark Lighting
-myst.symbol.LightingNormal.name=Normal Lighting
-myst.symbol.Mineshafts.name=Mineshafts
-myst.symbol.ModClear.name=Clear Modifiers
-myst.symbol.ModColorMaroon=Maroon Color
-myst.symbol.ModColorRed=Red Color
-myst.symbol.ModColorOlive=Olive Color
-myst.symbol.ModColorYellow=Yellow Color
-myst.symbol.ModColorDarkGreen=Dark Green Color
-myst.symbol.ModColorGreen=Green Color
-myst.symbol.ModColorTeal=Teal Color
-myst.symbol.ModColorCyan=Cyan Color
-myst.symbol.ModColorNavy=Navy Color
-myst.symbol.ModColorBlue=Blue Color
-myst.symbol.ModColorPurple=Purple Color
-myst.symbol.ModColorMagenta=Magenta Color
-myst.symbol.ModColorBlack=Black Color
-myst.symbol.ModColorGrey=Grey Color
-myst.symbol.ModColorSilver=Silver Color
-myst.symbol.ModColorWhite=White Color
-myst.symbol.ModGradient.name=Gradient
-myst.symbol.MoonDark.name=Dark Moon
-myst.symbol.MoonNormal.name=Normal Moon
-myst.symbol.NetherFort.name=Nether Fortress
-myst.symbol.NoHorizon.name=Boundless Sky
-myst.symbol.NoSea.name=No Seas
-myst.symbol.Obelisks.name=Obelisks
-myst.symbol.PvPOff.name=Anti-PvP
-myst.symbol.Rainbow.name=Rainbow
-myst.symbol.Ravines.name=Ravines
-myst.symbol.Skylands.name=Skylands
-myst.symbol.StarFissure.name=Star Fissure
-myst.symbol.StarsDark.name=Dark Stars
-myst.symbol.StarsEndSky.name=Ender Starfield
-myst.symbol.StarsNormal.name=Normal Stars
-myst.symbol.StarsTwinkle.name=Twinkling Stars
-myst.symbol.Strongholds.name=Strongholds
-myst.symbol.SunDark.name=Dark Sun
-myst.symbol.SunNormal.name=Normal Sun
-myst.symbol.Tendrils.name=Tendrils
-myst.symbol.TerModSpheres.name=Spheres
-myst.symbol.TerrainAmplified.name=Amplified Normal World
-myst.symbol.TerrainEnd.name=Island World
-myst.symbol.TerrainNether.name=Cave World
-myst.symbol.TerrainNormal.name=Standard World
-myst.symbol.WeatherCloudy.name=Overcast
-myst.symbol.WeatherFast.name=Fast Weather
-myst.symbol.WeatherNorm.name=Normal Weather
-myst.symbol.WeatherOff.name=No Weather
-myst.symbol.WeatherOn.name=Eternal Weather
-myst.symbol.WeatherRain.name=Eternal Rain
-myst.symbol.WeatherSlow.name=Slow Weather
-myst.symbol.WeatherSnow.name=Eternal Snow
-myst.symbol.WeatherStorm.name=Eternal Storm
-myst.symbol.Villages.name=Villages
-myst.symbol.Void.name=Void World
+myst.symbol.biocongrid.name=Grid-form Biome Distribution
+myst.symbol.bioconhuge.name=Huge Biome Distribution
+myst.symbol.bioconlarge.name=Large Biome Distribution
+myst.symbol.bioconmedium.name=Medium Biome Distribution
+myst.symbol.bioconnative.name=Native Biome Distribution
+myst.symbol.bioconsingle.name=Single Biome Distribution
+myst.symbol.bioconsmall.name=Small Biome Distribution
+myst.symbol.biocontiled.name=Tiled Biome Distribution
+myst.symbol.biocontiny.name=Tiny Biome Distribution
+myst.symbol.caves.name=Caves
+myst.symbol.colorcloud.name=Cloud Color
+myst.symbol.colorcloudnat.name=Natural Cloud Color
+myst.symbol.colorfog.name=Fog Color
+myst.symbol.colorfognat.name=Natural Fog Color
+myst.symbol.colorfoliage.name=Foliage Color
+myst.symbol.colorfoliagenat.name=Natural Foliage Color
+myst.symbol.colorgrass.name=Grass Color
+myst.symbol.colorgrassnat.name=Natural Grass Color
+myst.symbol.colorhorizon.name=Sunset Color
+myst.symbol.colorsky.name=Sky Color
+myst.symbol.colorskynat.name=Natural Sky Color
+myst.symbol.colorskynight.name=Night Sky Color
+myst.symbol.colorwater.name=Water Color
+myst.symbol.colorwaternat.name=Natural Water Color
+myst.symbol.cryform.name=Crystalline Formations
+myst.symbol.denseores.name=Dense Ores
+myst.symbol.dungeons.name=Dungeons
+myst.symbol.envaccel.name=Accelerated
+myst.symbol.envexplosions.name=Spontaneous Explosions
+myst.symbol.envlightning.name=Lightning
+myst.symbol.envmeteor.name=Meteors
+myst.symbol.envscorch.name=Scorched Surface
+myst.symbol.featurelargedummy.name=Lacking Large Features
+myst.symbol.featuremediumdummy.name=Lacking Medium Features
+myst.symbol.featuresmalldummy.name=Lacking Small Features
+myst.symbol.flat.name=Flat World
+myst.symbol.floatislands.name=Floating Islands
+myst.symbol.genspikes.name=Spikes
+myst.symbol.hugetrees.name=Huge Trees
+myst.symbol.lakesdeep.name=Deep Lakes
+myst.symbol.lakessurface.name=Surface Lakes
+myst.symbol.lightingbright.name=Bright Lighting
+myst.symbol.lightingdark.name=Dark Lighting
+myst.symbol.lightingnormal.name=Normal Lighting
+myst.symbol.mineshafts.name=Mineshafts
+myst.symbol.modclear.name=Clear Modifiers
+myst.symbol.modcolormaroon.name=Maroon Color
+myst.symbol.modcolorred.name=Red Color
+myst.symbol.modcolorolive.name=Olive Color
+myst.symbol.modcoloryellow.name=Yellow Color
+myst.symbol.modcolordarkgreen.name=Dark Green Color
+myst.symbol.modcolorgreen.name=Green Color
+myst.symbol.modcolorteal.name=Teal Color
+myst.symbol.modcolorcyan.name=Cyan Color
+myst.symbol.modcolornavy.name=Navy Color
+myst.symbol.modcolorblue.name=Blue Color
+myst.symbol.modcolorpurple.name=Purple Color
+myst.symbol.modcolormagenta.name=Magenta Color
+myst.symbol.modcolorblack.name=Black Color
+myst.symbol.modcolorgrey.name=Grey Color
+myst.symbol.modcolorsilver.name=Silver Color
+myst.symbol.modcolorwhite.name=White Color
+myst.symbol.modgradient.name=Gradient
+myst.symbol.moondark.name=Dark Moon
+myst.symbol.moonnormal.name=Normal Moon
+myst.symbol.netherfort.name=Nether Fortress
+myst.symbol.nohorizon.name=Boundless Sky
+myst.symbol.nosea.name=No Seas
+myst.symbol.obelisks.name=Obelisks
+myst.symbol.pvpoff.name=Anti-PvP
+myst.symbol.rainbow.name=Rainbow
+myst.symbol.ravines.name=Ravines
+myst.symbol.skylands.name=Skylands
+myst.symbol.starfissure.name=Star Fissure
+myst.symbol.starsdark.name=Dark Stars
+myst.symbol.starsendsky.name=Ender Starfield
+myst.symbol.starsnormal.name=Normal Stars
+myst.symbol.starstwinkle.name=Twinkling Stars
+myst.symbol.strongholds.name=Strongholds
+myst.symbol.sundark.name=Dark Sun
+myst.symbol.sunnormal.name=Normal Sun
+myst.symbol.tendrils.name=Tendrils
+myst.symbol.termodspheres.name=Spheres
+myst.symbol.terrainamplified.name=Amplified Normal World
+myst.symbol.terrainend.name=Island World
+myst.symbol.terrainnether.name=Cave World
+myst.symbol.terrainnormal.name=Standard World
+myst.symbol.terrainflat.name=Flat World
+myst.symbol.terrainvoid.name=Void World
+myst.symbol.weathercloudy.name=Overcast
+myst.symbol.weatherfast.name=Fast Weather
+myst.symbol.weathernorm.name=Normal Weather
+myst.symbol.weatheroff.name=No Weather
+myst.symbol.weatheron.name=Eternal Weather
+myst.symbol.weatherrain.name=Eternal Rain
+myst.symbol.weatherslow.name=Slow Weather
+myst.symbol.weathersnow.name=Eternal Snow
+myst.symbol.weatherstorm.name=Eternal Storm
+myst.symbol.villages.name=Villages
+myst.symbol.void.name=Void World
