Update lang files to new symbol naming-styles

--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -110,101 +110,101 @@ instability.bonus.troll.left=%s hat die Welt verlassen. Die Instabilität wird s
 myst.symbol.biome.wrapper=Biom: %s
 myst.symbol.block.wrapper=Block: %s
 
-myst.symbol.BioConGrid.name=Netzform-Biomverteilung
-myst.symbol.BioConHuge.name=Riesige Biome
-myst.symbol.BioConLarge.name=Große Biome
-myst.symbol.BioConMedium.name=Mittelgroße Biome
-myst.symbol.BioConNative.name=Native Biomkontrolle
-myst.symbol.BioConSingle.name=Einzelnes Biom
-myst.symbol.BioConSmall.name=Kleine Biome
-myst.symbol.BioConTiled.name=Gekachelte Biome
-myst.symbol.BioConTiny.name=Winzige Biome
-myst.symbol.Caves.name=Höhlen
-myst.symbol.ColorCloud.name=Wolkenfarbe
-myst.symbol.ColorCloudNat.name=Natürliche Wolkenfarbe
-myst.symbol.ColorFog.name=Nebelfarbe
-myst.symbol.ColorFogNat.name=Natürliche Nebelfarbe
-myst.symbol.ColorFoliage.name=Blattwerkfarbe
-myst.symbol.ColorFoliageNat.name=Natürliche Blattwerkfarbe
-myst.symbol.ColorGrass.name=Grasfarbe
-myst.symbol.ColorGrassNat.name=Natürliche Grasfarbe
-myst.symbol.ColorHorizon.name=Sonnenuntergangsfarbe
-myst.symbol.ColorSky.name=Himmelsfarbe
-myst.symbol.ColorSkyNat.name=Natürliche Himmelsfarbe
-myst.symbol.ColorSkyNight.name=Nachthimmelsfarbe
-myst.symbol.ColorWater.name=Wasserfarbe
-myst.symbol.ColorWaterNat.name=Natürliche Wasserfarbe
-myst.symbol.CryForm.name=Kristallformationen
-myst.symbol.DenseOres.name=Dichte Erze
-myst.symbol.Dungeons.name=Verliese
-myst.symbol.EnvAccel.name=Beschleunigt
-myst.symbol.EnvExplosions.name=Spontane Explosionen
-myst.symbol.EnvLightning.name=Blitz und Donner
-myst.symbol.EnvMeteor.name=Meteore
-myst.symbol.EnvScorch.name=Versengte Oberfläche
-myst.symbol.FeatureLargeDummy.name=Fehlende Große Features
-myst.symbol.FeatureMediumDummy.name=Fehlende Mäßige Features 
-myst.symbol.FeatureSmallDummy.name=Fehlende Kleine Features
-myst.symbol.Flat.name=Flache Welt
-myst.symbol.FloatIslands.name=Schwebende Inseln
-myst.symbol.GenSpikes.name=Stacheln
-myst.symbol.HugeTrees.name=Riesige Bäume
-myst.symbol.LakesDeep.name=Untergrundseen
-myst.symbol.LakesSurface.name=Oberflächenseen
-myst.symbol.LightingBright.name=Helles Licht
-myst.symbol.LightingDark.name=Dunkles Licht
-myst.symbol.LightingNormal.name=Normales Licht
-myst.symbol.Mineshafts.name=Minenschächte
-myst.symbol.ModClear.name=Modifizierungen entfernen
-myst.symbol.ModColorMaroon=Kastanienbraune Farbe
-myst.symbol.ModColorRed=Rote Farbe
-myst.symbol.ModColorOlive=Olivgrüne Farbe
-myst.symbol.ModColorYellow=Gelbe Farbe
-myst.symbol.ModColorDarkGreen=Dunkelgrüne Farbe
-myst.symbol.ModColorGreen=Grüne Farbe
-myst.symbol.ModColorTeal=Blaugrüne Farbe
-myst.symbol.ModColorCyan=Türkise Farbe
-myst.symbol.ModColorNavy=Marinblaue Farbe
-myst.symbol.ModColorBlue=Blaue Farbe
-myst.symbol.ModColorPurple=Violette Farbe
-myst.symbol.ModColorMagenta=Magenta Farbe
-myst.symbol.ModColorBlack=Schwarze Farbe
-myst.symbol.ModColorGrey=Graue Farbe
-myst.symbol.ModColorSilver=Silberne Farbe
-myst.symbol.ModColorWhite=Weiße Farbe
-myst.symbol.ModGradient.name=Farbverlauf
-myst.symbol.MoonDark.name=Dunkler Mond
-myst.symbol.MoonNormal.name=Normaler Mond
-myst.symbol.NetherFort.name=Netherfestung
-myst.symbol.NoHorizon.name=Grenzenloser Himmel
-myst.symbol.NoSea.name=Keine Seen
-myst.symbol.Obelisks.name=Obelisken
-myst.symbol.PvPOff.name=Kein PVP
-myst.symbol.Rainbow.name=Regenbogen
-myst.symbol.Ravines.name=Schluchten
-myst.symbol.Skylands.name=Himmelslande
-myst.symbol.StarFissure.name=Sternenkluft
-myst.symbol.StarsDark.name=Dunkle Sterne
-myst.symbol.StarsEndSky.name=Endersternenhimmel
-myst.symbol.StarsNormal.name=Normale Sterne
-myst.symbol.StarsTwinkle.name=Funkelnde Sterne
-myst.symbol.Strongholds.name=Festungen
-myst.symbol.SunDark.name=Dunkle Sonne
-myst.symbol.SunNormal.name=Normale Sonne
-myst.symbol.Tendrils.name=Ranken
-myst.symbol.TerModSpheres.name=Sphären
-myst.symbol.TerrainAmplified.name=Zerklüftete Welt
-myst.symbol.TerrainEnd.name=Inselwelt
-myst.symbol.TerrainNether.name=Höhlenwelt
-myst.symbol.TerrainNormal.name=Standardwelt
-myst.symbol.WeatherCloudy.name=Bewölkt
-myst.symbol.WeatherFast.name=Schnelles Wetter
-myst.symbol.WeatherNorm.name=Normales Wetter
-myst.symbol.WeatherOff.name=Kein Wetter
-myst.symbol.WeatherOn.name=Ewiges Wetter
-myst.symbol.WeatherRain.name=Ewiger Regen
-myst.symbol.WeatherSlow.name=Langsames Wetter
-myst.symbol.WeatherSnow.name=Ewiger Schnee
-myst.symbol.WeatherStorm.name=Ewiger Sturm
-myst.symbol.Villages.name=Dörfer
-myst.symbol.Void.name=Leere Welt
+myst.symbol.biocongrid.name=Netzform-Biomverteilung
+myst.symbol.bioconhuge.name=Riesige Biome
+myst.symbol.bioconlarge.name=Große Biome
+myst.symbol.bioconmedium.name=Mittelgroße Biome
+myst.symbol.bioconnative.name=Native Biomkontrolle
+myst.symbol.bioconsingle.name=Einzelnes Biom
+myst.symbol.bioconsmall.name=Kleine Biome
+myst.symbol.biocontiled.name=Gekachelte Biome
+myst.symbol.biocontiny.name=Winzige Biome
+myst.symbol.caves.name=Höhlen
+myst.symbol.colorcloud.name=Wolkenfarbe
+myst.symbol.colorcloudnat.name=Natürliche Wolkenfarbe
+myst.symbol.colorfog.name=Nebelfarbe
+myst.symbol.colorfognat.name=Natürliche Nebelfarbe
+myst.symbol.colorfoliage.name=Blattwerkfarbe
+myst.symbol.colorfoliagenat.name=Natürliche Blattwerkfarbe
+myst.symbol.colorgrass.name=Grasfarbe
+myst.symbol.colorgrassnat.name=Natürliche Grasfarbe
+myst.symbol.colorhorizon.name=Sonnenuntergangsfarbe
+myst.symbol.colorsky.name=Himmelsfarbe
+myst.symbol.colorskynat.name=Natürliche Himmelsfarbe
+myst.symbol.colorskynight.name=Nachthimmelsfarbe
+myst.symbol.colorwater.name=Wasserfarbe
+myst.symbol.colorwaternat.name=Natürliche Wasserfarbe
+myst.symbol.cryform.name=Kristallformationen
+myst.symbol.denseores.name=Dichte Erze
+myst.symbol.dungeons.name=Verliese
+myst.symbol.envaccel.name=Beschleunigt
+myst.symbol.envexplosions.name=Spontane Explosionen
+myst.symbol.envlightning.name=Blitz und Donner
+myst.symbol.envmeteor.name=Meteore
+myst.symbol.envscorch.name=Versengte Oberfläche
+myst.symbol.featurelargedummy.name=Fehlende Große Features
+myst.symbol.featuremediumdummy.name=Fehlende Mäßige Features
+myst.symbol.featuresmalldummy.name=Fehlende Kleine Features
+myst.symbol.flat.name=Flache Welt
+myst.symbol.floatislands.name=Schwebende Inseln
+myst.symbol.genspikes.name=Stacheln
+myst.symbol.hugetrees.name=Riesige Bäume
+myst.symbol.lakesdeep.name=Untergrundseen
+myst.symbol.lakessurface.name=Oberflächenseen
+myst.symbol.lightingbright.name=Helles Licht
+myst.symbol.lightingdark.name=Dunkles Licht
+myst.symbol.lightingnormal.name=Normales Licht
+myst.symbol.mineshafts.name=Minenschächte
+myst.symbol.modclear.name=Modifizierungen entfernen
+myst.symbol.modcolormaroon=Kastanienbraune Farbe
+myst.symbol.modcolorred=Rote Farbe
+myst.symbol.modcolorolive=Olivgrüne Farbe
+myst.symbol.modcoloryellow=Gelbe Farbe
+myst.symbol.modcolordarkgreen=Dunkelgrüne Farbe
+myst.symbol.modcolorgreen=Grüne Farbe
+myst.symbol.modcolorteal=Blaugrüne Farbe
+myst.symbol.modcolorcyan=Türkise Farbe
+myst.symbol.modcolornavy=Marinblaue Farbe
+myst.symbol.modcolorblue=Blaue Farbe
+myst.symbol.modcolorpurple=Violette Farbe
+myst.symbol.modcolormagenta=Magenta Farbe
+myst.symbol.modcolorblack=Schwarze Farbe
+myst.symbol.modcolorgrey=Graue Farbe
+myst.symbol.modcolorsilver=Silberne Farbe
+myst.symbol.modcolorwhite=Weiße Farbe
+myst.symbol.modgradient.name=Farbverlauf
+myst.symbol.moondark.name=Dunkler Mond
+myst.symbol.moonnormal.name=Normaler Mond
+myst.symbol.netherfort.name=Netherfestung
+myst.symbol.nohorizon.name=Grenzenloser Himmel
+myst.symbol.nosea.name=Keine Seen
+myst.symbol.obelisks.name=Obelisken
+myst.symbol.pvpoff.name=Kein PVP
+myst.symbol.rainbow.name=Regenbogen
+myst.symbol.ravines.name=Schluchten
+myst.symbol.skylands.name=Himmelslande
+myst.symbol.starFissure.name=Sternenkluft
+myst.symbol.starsdark.name=Dunkle Sterne
+myst.symbol.starsendsky.name=Endersternenhimmel
+myst.symbol.starsnormal.name=Normale Sterne
+myst.symbol.starstwinkle.name=Funkelnde Sterne
+myst.symbol.strongholds.name=Festungen
+myst.symbol.sundark.name=Dunkle Sonne
+myst.symbol.sunnormal.name=Normale Sonne
+myst.symbol.tendrils.name=Ranken
+myst.symbol.termodspheres.name=Sphären
+myst.symbol.terrainamplified.name=Zerklüftete Welt
+myst.symbol.terrainend.name=Inselwelt
+myst.symbol.terrainnether.name=Höhlenwelt
+myst.symbol.terrainnormal.name=Standardwelt
+myst.symbol.weathercloudy.name=Bewölkt
+myst.symbol.weatherfast.name=Schnelles Wetter
+myst.symbol.weathernorm.name=Normales Wetter
+myst.symbol.weatheroff.name=Kein Wetter
+myst.symbol.weatheron.name=Ewiges Wetter
+myst.symbol.weatherrain.name=Ewiger Regen
+myst.symbol.weatherslow.name=Langsames Wetter
+myst.symbol.weathersnow.name=Ewiger Schnee
+myst.symbol.weatherstorm.name=Ewiger Sturm
+myst.symbol.villages.name=Dörfer
+myst.symbol.void.name=Leere Welt
