--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -110,101 +110,101 @@ instability.bonus.troll.left=%s已经离开这个世界.不稳定惩罚会逐渐
 myst.symbol.biome.wrapper=%s生态群系
 myst.symbol.block.wrapper=%s方块
 
-myst.symbol.BioConGrid.name=格型生物群系
-myst.symbol.BioConHuge.name=巨型生物群系
-myst.symbol.BioConLarge.name=大型生物群系
-myst.symbol.BioConMedium.name=中型生物群系
-myst.symbol.BioConNative.name=本地生物群系
-myst.symbol.BioConSingle.name=单一生物群系
-myst.symbol.BioConSmall.name=小型生物群系
-myst.symbol.BioConTiled.name=附加生物群系
-myst.symbol.BioConTiny.name=微型生物群系
-myst.symbol.Caves.name=洞穴
-myst.symbol.ColorCloud.name=云朵颜色
-myst.symbol.ColorCloudNat.name=天然云朵颜色
-myst.symbol.ColorFog.name=雾颜色
-myst.symbol.ColorFogNat.name=天然雾颜色
-myst.symbol.ColorFoliage.name=植物颜色
-myst.symbol.ColorFoliageNat.name=天然植物颜色
-myst.symbol.ColorGrass.name=草颜色
-myst.symbol.ColorGrassNat.name=天然草颜色
-myst.symbol.ColorHorizon.name=日落颜色
-myst.symbol.ColorSky.name=天空颜色
-myst.symbol.ColorSkyNat.name=天然天空颜色
-myst.symbol.ColorSkyNight.name=夜空颜色
-myst.symbol.ColorWater.name=水颜色
-myst.symbol.ColorWaterNat.name=天然水颜色
-myst.symbol.CryForm.name=水晶生成
-myst.symbol.DenseOres.name=密集矿物
-myst.symbol.Dungeons.name=地牢
-myst.symbol.EnvAccel.name=加速
-myst.symbol.EnvExplosions.name=随机爆炸
-myst.symbol.EnvLightning.name=闪电
-myst.symbol.EnvMeteor.name=陨石坑
-myst.symbol.EnvScorch.name=燃烧大地
-myst.symbol.FeatureLargeDummy.name=缺失大型特征
-myst.symbol.FeatureMediumDummy.name=缺失中型特征
-myst.symbol.FeatureSmallDummy.name=缺失小型特征
-myst.symbol.Flat.name=平坦世界
-myst.symbol.FloatIslands.name=浮岛
-myst.symbol.GenSpikes.name=尖塔
-myst.symbol.HugeTrees.name=参天巨树
-myst.symbol.LakesDeep.name=幽深湖泊
-myst.symbol.LakesSurface.name=地表湖泊
-myst.symbol.LightingBright.name=明亮光照
-myst.symbol.LightingDark.name=暗淡光照
-myst.symbol.LightingNormal.name=正常光照
-myst.symbol.Mineshafts.name=矿井
-myst.symbol.ModClear.name=清除修改
-myst.symbol.ModColorMaroon.name=栗色
-myst.symbol.ModColorRed.name=红色
-myst.symbol.ModColorOlive.name=橄榄色
-myst.symbol.ModColorYellow.name=黄色
-myst.symbol.ModColorDarkGreen.name=暗绿色
-myst.symbol.ModColorGreen.name=绿色
-myst.symbol.ModColorTeal.name=深青色
-myst.symbol.ModColorCyan.name=青色
-myst.symbol.ModColorNavy.name=藏青色
-myst.symbol.ModColorBlue.name=蓝色
-myst.symbol.ModColorPurple.name=紫色
-myst.symbol.ModColorMagenta.name=品红色
-myst.symbol.ModColorBlack.name=黑色
-myst.symbol.ModColorGrey.name=灰色
-myst.symbol.ModColorSilver.name=银色
-myst.symbol.ModColorWhite.name=白色
-myst.symbol.ModGradient.name=渐变
-myst.symbol.MoonDark.name=深色月亮
-myst.symbol.MoonNormal.name=正常月亮
-myst.symbol.NetherFort.name=下界要塞
-myst.symbol.NoHorizon.name=无边天空
-myst.symbol.NoSea.name=无海洋
-myst.symbol.Obelisks.name=方尖碑
-myst.symbol.PvPOff.name=反PvP
-myst.symbol.Rainbow.name=彩虹
-myst.symbol.Ravines.name=峡谷
-myst.symbol.Skylands.name=空岛
-myst.symbol.StarFissure.name=星之裂痕
-myst.symbol.StarsDark.name=深色星星
-myst.symbol.StarsEndSky.name=末影粒子效果
-myst.symbol.StarsNormal.name=正常星星
-myst.symbol.StarsTwinkle.name=闪烁星星
-myst.symbol.Strongholds.name=要塞
-myst.symbol.SunDark.name=深色太阳
-myst.symbol.SunNormal.name=正常太阳
-myst.symbol.Tendrils.name=卷须
-myst.symbol.TerModSpheres.name=球体
-myst.symbol.TerrainAmplified.name=放大化正常世界
-myst.symbol.TerrainEnd.name=岛屿世界
-myst.symbol.TerrainNether.name=洞穴世界
-myst.symbol.TerrainNormal.name=普通世界
-myst.symbol.WeatherCloudy.name=阴天
-myst.symbol.WeatherFast.name=快速变换天气
-myst.symbol.WeatherNorm.name=正常天气
-myst.symbol.WeatherOff.name=无天气
-myst.symbol.WeatherOn.name=永久天气
-myst.symbol.WeatherRain.name=永久雨天
-myst.symbol.WeatherSlow.name=慢速变换天气
-myst.symbol.WeatherSnow.name=永久雪天
-myst.symbol.WeatherStorm.name=永久风暴
-myst.symbol.Villages.name=村落
-myst.symbol.Void.name=虚空世界
+myst.symbol.biocongrid.name=格型生物群系
+myst.symbol.bioconhuge.name=巨型生物群系
+myst.symbol.bioconlarge.name=大型生物群系
+myst.symbol.bioconmedium.name=中型生物群系
+myst.symbol.bioconnative.name=本地生物群系
+myst.symbol.bioconsingle.name=单一生物群系
+myst.symbol.bioconsmall.name=小型生物群系
+myst.symbol.biocontiled.name=附加生物群系
+myst.symbol.biocontiny.name=微型生物群系
+myst.symbol.caves.name=洞穴
+myst.symbol.colorcloud.name=云朵颜色
+myst.symbol.colorcloudnat.name=天然云朵颜色
+myst.symbol.colorfog.name=雾颜色
+myst.symbol.colorfognat.name=天然雾颜色
+myst.symbol.colorfoliage.name=植物颜色
+myst.symbol.colorfoliagenat.name=天然植物颜色
+myst.symbol.colorgrass.name=草颜色
+myst.symbol.colorgrassnat.name=天然草颜色
+myst.symbol.colorhorizon.name=日落颜色
+myst.symbol.colorsky.name=天空颜色
+myst.symbol.colorskynat.name=天然天空颜色
+myst.symbol.colorskynight.name=夜空颜色
+myst.symbol.colorwater.name=水颜色
+myst.symbol.colorwaternat.name=天然水颜色
+myst.symbol.cryform.name=水晶生成
+myst.symbol.denseores.name=密集矿物
+myst.symbol.dungeons.name=地牢
+myst.symbol.envaccel.name=加速
+myst.symbol.envexplosions.name=随机爆炸
+myst.symbol.envlightning.name=闪电
+myst.symbol.envmeteor.name=陨石坑
+myst.symbol.envscorch.name=燃烧大地
+myst.symbol.featurelargedummy.name=缺失大型特征
+myst.symbol.featuremediumdummy.name=缺失中型特征
+myst.symbol.featuresmalldummy.name=缺失小型特征
+myst.symbol.flat.name=平坦世界
+myst.symbol.floatislands.name=浮岛
+myst.symbol.genspikes.name=尖塔
+myst.symbol.hugetrees.name=参天巨树
+myst.symbol.lakesdeep.name=幽深湖泊
+myst.symbol.lakessurface.name=地表湖泊
+myst.symbol.lightingbright.name=明亮光照
+myst.symbol.lightingdark.name=暗淡光照
+myst.symbol.lightingnormal.name=正常光照
+myst.symbol.mineshafts.name=矿井
+myst.symbol.modclear.name=清除修改
+myst.symbol.modcolormaroon=Kastanienbraune =栗色
+myst.symbol.modcolorred=Rote =红色
+myst.symbol.modcolorolive=Olivgrüne =橄榄色
+myst.symbol.modcoloryellow=Gelbe =黄色
+myst.symbol.modcolordarkgreen=Dunkelgrüne =暗绿色
+myst.symbol.modcolorgreen=Grüne =绿色
+myst.symbol.modcolorteal=Blaugrüne =深青色
+myst.symbol.modcolorcyan=Türkise =青色
+myst.symbol.modcolornavy=Marinblaue =藏青色
+myst.symbol.modcolorblue=Blaue =蓝色
+myst.symbol.modcolorpurple=Violette =紫色
+myst.symbol.modcolormagenta=Magenta =品红色
+myst.symbol.modcolorblack=Schwarze =黑色
+myst.symbol.modcolorgrey=Graue =灰色
+myst.symbol.modcolorsilver=Silberne =银色
+myst.symbol.modcolorwhite=Weiße =白色
+myst.symbol.modgradient.name=渐变
+myst.symbol.moondark.name=深色月亮
+myst.symbol.moonnormal.name=正常月亮
+myst.symbol.netherfort.name=下界要塞
+myst.symbol.nohorizon.name=无边天空
+myst.symbol.nosea.name=无海洋
+myst.symbol.obelisks.name=方尖碑
+myst.symbol.pvpoff.name=反PvP
+myst.symbol.rainbow.name=彩虹
+myst.symbol.ravines.name=峡谷
+myst.symbol.skylands.name=空岛
+myst.symbol.starFissure.name=星之裂痕
+myst.symbol.starsdark.name=深色星星
+myst.symbol.starsendsky.name=末影粒子效果
+myst.symbol.starsnormal.name=正常星星
+myst.symbol.starstwinkle.name=闪烁星星
+myst.symbol.strongholds.name=要塞
+myst.symbol.sundark.name=深色太阳
+myst.symbol.sunnormal.name=正常太阳
+myst.symbol.tendrils.name=卷须
+myst.symbol.termodspheres.name=球体
+myst.symbol.terrainamplified.name=放大化正常世界
+myst.symbol.terrainend.name=岛屿世界
+myst.symbol.terrainnether.name=洞穴世界
+myst.symbol.terrainnormal.name=普通世界
+myst.symbol.weathercloudy.name=阴天
+myst.symbol.weatherfast.name=快速变换天气
+myst.symbol.weathernorm.name=正常天气
+myst.symbol.weatheroff.name=无天气
+myst.symbol.weatheron.name=永久天气
+myst.symbol.weatherrain.name=永久雨天
+myst.symbol.weatherslow.name=慢速变换天气
+myst.symbol.weathersnow.name=永久雪天
+myst.symbol.weatherstorm.name=永久风暴
+myst.symbol.villages.name=村落
+myst.symbol.void.name=虚空世界
