--- a/lang/cs_CZ.lang
+++ b/lang/cs_CZ.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=Odkaz ve stejné dimenzi
 linkeffect.maintainmomentum.name=Zachování pohybu
 linkeffect.relative.name=Relativní odkaz
 
-myst.symbol.BioConHuge.name=Obrovské biomy
-myst.symbol.BioConLarge.name=Velké biomy
-myst.symbol.BioConMedium.name=Střední biomy
-myst.symbol.BioConNative.name=Přirozené rozčlenění biomů
-myst.symbol.BioConSingle.name=Jediný biom
-myst.symbol.BioConSmall.name=Malé biomy
-myst.symbol.BioConTiled.name=Dlaždicové biomy
-myst.symbol.BioConTiny.name=Nejmenší biomy
-myst.symbol.Caves.name=Jeskyně
-myst.symbol.ColorCloud.name=Barva mraků
-myst.symbol.ColorCloudNat.name=Přirozená barva mraků
-myst.symbol.ColorFog.name=Barva mlhy
-myst.symbol.ColorFogNat.name=Přirozená barva mlhy
-myst.symbol.ColorFoliage.name=Barva listí
-myst.symbol.ColorFoliageNat.name=Přirozená barva listí
-myst.symbol.ColorGrass.name=Barva trávy
-myst.symbol.ColorGrassNat.name=Přirozená barva trávy
-myst.symbol.ColorHorizon.name=Barva západu slunce
-myst.symbol.ColorSky.name=Barva oblohy
-myst.symbol.ColorSkyNat.name=Přirozená barva oblohy
-myst.symbol.ColorSkyNight.name=Noční barva oblohy
-myst.symbol.ColorWater.name=Barva vody
-myst.symbol.ColorWaterNat.name=Přirozená barva vody
-myst.symbol.CryForm.name=Uskupení krystalů
-myst.symbol.DenseOres.name=Zhuštěné rudy
-myst.symbol.Dungeons.name=Líhně
-myst.symbol.EnvAccel.name=Zrychlení
-myst.symbol.EnvExplosions.name=Spontánní výbuchy
-myst.symbol.EnvLightning.name=Blesky
-myst.symbol.EnvMeteor.name=Meteory
-myst.symbol.EnvScorch.name=Spálený povrch
-myst.symbol.Flat.name=Rovinný svět
-myst.symbol.FloatIslands.name=Vznášející ostrovy
-myst.symbol.GenSpikes.name=Ostny
-myst.symbol.HugeTrees.name=Obrovské stromy
-myst.symbol.LakesDeep.name=Hluboká jezera
-myst.symbol.LakesSurface.name=Povrchová jezera
-myst.symbol.LightingBright.name=Světlé osvětlení
-myst.symbol.LightingDark.name=Tmavé osvětlení
-myst.symbol.LightingNormal.name=Normální osvětlení
-myst.symbol.Mineshafts.name=Důlní šachty
-myst.symbol.ModClear.name=Čistič modifikátorů
-myst.symbol.ModGradient.name=Barevný přechod
-myst.symbol.MoonDark.name=Temný měsíc
-myst.symbol.MoonNormal.name=Normální měsíc
-myst.symbol.NetherFort.name=Netherová pevnost
-myst.symbol.NoHorizon.name=Nekonečná obloha
-myst.symbol.NoSea.name=Žádné moře
-myst.symbol.Obelisks.name=Obelisky
-myst.symbol.PvPOff.name=Anti-PvP
-myst.symbol.Rainbow.name=Duha
-myst.symbol.Ravines.name=Rokle
-myst.symbol.Skylands.name=Nebeská krajina
-myst.symbol.StarFissure.name=Hvězdná trhlina
-myst.symbol.StarsDark.name=Temné hvězdy
-myst.symbol.StarsEndSky.name=Enderové hvězdy
-myst.symbol.StarsNormal.name=Normální hvězdy
-myst.symbol.StarsTwinkle.name=Mihotavé hvězdy
-myst.symbol.Strongholds.name=Pevnosti
-myst.symbol.SunDark.name=Temné slunce
-myst.symbol.SunNormal.name=Normální slunce
-myst.symbol.Tendrils.name=Úponky
-myst.symbol.TerModSpheres.name=Koule
-myst.symbol.TerrainAmplified.name=Svět s extrémním terénem
-myst.symbol.TerrainEnd.name=Ostrovní svět
-myst.symbol.TerrainNether.name=Jeskynní svět
-myst.symbol.TerrainNormal.name=Standardní svět
-myst.symbol.WeatherCloudy.name=Zataženo
-myst.symbol.WeatherFast.name=Rychlé počasí
-myst.symbol.WeatherNorm.name=Normální počasí
-myst.symbol.WeatherOff.name=Žádné počasí
-myst.symbol.WeatherOn.name=Věčné počasí
-myst.symbol.WeatherRain.name=Věčný déšť
-myst.symbol.WeatherSlow.name=Pomalé počasí
-myst.symbol.WeatherSnow.name=Věčná sněhová bouře
-myst.symbol.WeatherStorm.name=Věčná bouře
-myst.symbol.Villages.name=Vesnice
-myst.symbol.Void.name=Prázdný svět
+myst.symbol.bioconhuge.name=Obrovské biomy
+myst.symbol.bioconlarge.name=Velké biomy
+myst.symbol.bioconmedium.name=Střední biomy
+myst.symbol.bioconnative.name=Přirozené rozčlenění biomů
+myst.symbol.bioconsingle.name=Jediný biom
+myst.symbol.bioconsmall.name=Malé biomy
+myst.symbol.biocontiled.name=Dlaždicové biomy
+myst.symbol.biocontiny.name=Nejmenší biomy
+myst.symbol.caves.name=Jeskyně
+myst.symbol.colorcloud.name=Barva mraků
+myst.symbol.colorcloudnat.name=Přirozená barva mraků
+myst.symbol.colorfog.name=Barva mlhy
+myst.symbol.colorfognat.name=Přirozená barva mlhy
+myst.symbol.colorfoliage.name=Barva listí
+myst.symbol.colorfoliagenat.name=Přirozená barva listí
+myst.symbol.colorgrass.name=Barva trávy
+myst.symbol.colorgrassnat.name=Přirozená barva trávy
+myst.symbol.colorhorizon.name=Barva západu slunce
+myst.symbol.colorsky.name=Barva oblohy
+myst.symbol.colorskynat.name=Přirozená barva oblohy
+myst.symbol.colorskynight.name=Noční barva oblohy
+myst.symbol.colorwater.name=Barva vody
+myst.symbol.colorwaternat.name=Přirozená barva vody
+myst.symbol.cryform.name=Uskupení krystalů
+myst.symbol.denseores.name=Zhuštěné rudy
+myst.symbol.dungeons.name=Líhně
+myst.symbol.envaccel.name=Zrychlení
+myst.symbol.envexplosions.name=Spontánní výbuchy
+myst.symbol.envlightning.name=Blesky
+myst.symbol.envmeteor.name=Meteory
+myst.symbol.envscorch.name=Spálený povrch
+myst.symbol.flat.name=Rovinný svět
+myst.symbol.floatislands.name=Vznášející ostrovy
+myst.symbol.genspikes.name=Ostny
+myst.symbol.hugetrees.name=Obrovské stromy
+myst.symbol.lakesdeep.name=Hluboká jezera
+myst.symbol.lakessurface.name=Povrchová jezera
+myst.symbol.lightingbright.name=Světlé osvětlení
+myst.symbol.lightingdark.name=Tmavé osvětlení
+myst.symbol.lightingnormal.name=Normální osvětlení
+myst.symbol.mineshafts.name=Důlní šachty
+myst.symbol.modclear.name=Čistič modifikátorů
+myst.symbol.modgradient.name=Barevný přechod
+myst.symbol.moondark.name=Temný měsíc
+myst.symbol.moonnormal.name=Normální měsíc
+myst.symbol.netherfort.name=Netherová pevnost
+myst.symbol.nohorizon.name=Nekonečná obloha
+myst.symbol.nosea.name=Žádné moře
+myst.symbol.obelisks.name=Obelisky
+myst.symbol.pvpoff.name=Anti-PvP
+myst.symbol.rainbow.name=Duha
+myst.symbol.ravines.name=Rokle
+myst.symbol.skylands.name=Nebeská krajina
+myst.symbol.starfissure.name=Hvězdná trhlina
+myst.symbol.starsdark.name=Temné hvězdy
+myst.symbol.starsendsky.name=Enderové hvězdy
+myst.symbol.starsnormal.name=Normální hvězdy
+myst.symbol.starstwinkle.name=Mihotavé hvězdy
+myst.symbol.strongholds.name=Pevnosti
+myst.symbol.sundark.name=Temné slunce
+myst.symbol.sunnormal.name=Normální slunce
+myst.symbol.tendrils.name=Úponky
+myst.symbol.termodspheres.name=Koule
+myst.symbol.terrainamplified.name=Svět s extrémním terénem
+myst.symbol.terrainend.name=Ostrovní svět
+myst.symbol.terrainnether.name=Jeskynní svět
+myst.symbol.terrainnormal.name=Standardní svět
+myst.symbol.weathercloudy.name=Zataženo
+myst.symbol.weatherfast.name=Rychlé počasí
+myst.symbol.weathernorm.name=Normální počasí
+myst.symbol.weatheroff.name=Žádné počasí
+myst.symbol.weatheron.name=Věčné počasí
+myst.symbol.weatherrain.name=Věčný déšť
+myst.symbol.weatherslow.name=Pomalé počasí
+myst.symbol.weathersnow.name=Věčná sněhová bouře
+myst.symbol.weatherstorm.name=Věčná bouře
+myst.symbol.villages.name=Vesnice
+myst.symbol.void.name=Prázdný svět
