--- a/lang/fi_FI.lang
+++ b/lang/fi_FI.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=Sisäinen linkitys
 linkeffect.maintainmomentum.name=Ylläpitää liike
 linkeffect.relative.name=Suhteellinen linkki
 
-myst.symbol.BioConHuge.name=Valtavat biomit
-myst.symbol.BioConLarge.name=Suuret biomit
-myst.symbol.BioConMedium.name=Keskikokoiset biomit
-myst.symbol.BioConNative.name=Luonnollinen biomiohjain
-myst.symbol.BioConSingle.name=Yksittäinen biomi
-myst.symbol.BioConSmall.name=Pienet biomit
-myst.symbol.BioConTiled.name=Laatoitetut biomit
-myst.symbol.BioConTiny.name=Hyvin pienet biomit
-myst.symbol.Caves.name=Luolia
-myst.symbol.ColorCloud.name=Pilvien väri
-myst.symbol.ColorCloudNat.name=Luonnollinen pilvien väri
-myst.symbol.ColorFog.name=Sumun väri
-myst.symbol.ColorFogNat.name=Luonnollinen sumun väri
-myst.symbol.ColorFoliage.name=Lehvistön väri
-myst.symbol.ColorFoliageNat.name=Luonnollinen lehvistön väri
-myst.symbol.ColorGrass.name=Ruohon väri
-myst.symbol.ColorGrassNat.name=Luonnollinen ruohon väri
-myst.symbol.ColorHorizon.name=Auringonlaskun väri
-myst.symbol.ColorSky.name=Taivaan väri
-myst.symbol.ColorSkyNat.name=Luonnollinen taivaan väri
-myst.symbol.ColorSkyNight.name=Yötaivaan väri
-myst.symbol.ColorWater.name=Veden väri
-myst.symbol.ColorWaterNat.name=Luonnollinen veden väri
-myst.symbol.CryForm.name=Kidemuodostelmia
-myst.symbol.DenseOres.name=Tiheät malmit
-myst.symbol.Dungeons.name=Tyrmiä
-myst.symbol.EnvAccel.name=Kiihdytetty
-myst.symbol.EnvExplosions.name=Spontaani räjähtely
-myst.symbol.EnvLightning.name=Salamoita
-myst.symbol.EnvMeteor.name=Meteoreja
-myst.symbol.EnvScorch.name=Poltettu pinta
-myst.symbol.Flat.name=Tasainen maailma
-myst.symbol.FloatIslands.name=Leijuvat saaret
-myst.symbol.GenSpikes.name=Piikkejä
-myst.symbol.HugeTrees.name=Valtavia puita
-myst.symbol.LakesDeep.name=Syviä järviä
-myst.symbol.LakesSurface.name=Pintajärviä
-myst.symbol.LightingBright.name=Kirkas valaistus
-myst.symbol.LightingDark.name=Pimeä valaistus
-myst.symbol.LightingNormal.name=Normaali valaistus
-myst.symbol.Mineshafts.name=Kaivoskuiluja
-myst.symbol.ModClear.name=Nollaa määritelmät
-myst.symbol.ModGradient.name=Gradientti
-myst.symbol.MoonDark.name=Pimeä kuu
-myst.symbol.MoonNormal.name=Normaali kuu
-myst.symbol.NetherFort.name=Hornalinnoituksia
-myst.symbol.NoHorizon.name=Ei horisonttia
-myst.symbol.NoSea.name=Ei meriä
-myst.symbol.Obelisks.name=Obeliskeja
-myst.symbol.PvPOff.name=Ei PvP:tä
-myst.symbol.Rainbow.name=Sateenkaari
-myst.symbol.Ravines.name=Rotkoja
-myst.symbol.Skylands.name=Taivasmaat
-myst.symbol.StarFissure.name=Tähtihalkeama
-myst.symbol.StarsDark.name=Pimeät tähdet
-myst.symbol.StarsEndSky.name=Ender-tähdistö
-myst.symbol.StarsNormal.name=Normaalit tähdet
-myst.symbol.StarsTwinkle.name=Tuikkivat tähdet
-myst.symbol.Strongholds.name=Linnoituksia
-myst.symbol.SunDark.name=Pimeä aurinko
-myst.symbol.SunNormal.name=Normaali aurinko
-myst.symbol.Tendrils.name=Kärhiä
-myst.symbol.TerModSpheres.name=Palloja
-myst.symbol.TerrainAmplified.name=Vahvistettu normaali maailma
-myst.symbol.TerrainEnd.name=Saarimaalima
-myst.symbol.TerrainNether.name=Luolamaailma
-myst.symbol.TerrainNormal.name=Tavallinen maailma
-myst.symbol.WeatherCloudy.name=Pilvinen sää
-myst.symbol.WeatherFast.name=Nopea sää
-myst.symbol.WeatherNorm.name=Normaali sää
-myst.symbol.WeatherOff.name=Ei säätä
-myst.symbol.WeatherOn.name=Ikuinen sää
-myst.symbol.WeatherRain.name=Ikuinen sade
-myst.symbol.WeatherSlow.name=Hidas sää
-myst.symbol.WeatherSnow.name=Ikuinen lumisade
-myst.symbol.WeatherStorm.name=Ikuinen myrsky
-myst.symbol.Villages.name=Kyliä
-myst.symbol.Void.name=Tyhjä maailma
+myst.symbol.bioconhuge.name=Valtavat biomit
+myst.symbol.bioconlarge.name=Suuret biomit
+myst.symbol.bioconmedium.name=Keskikokoiset biomit
+myst.symbol.bioconnative.name=Luonnollinen biomiohjain
+myst.symbol.bioconsingle.name=Yksittäinen biomi
+myst.symbol.bioconsmall.name=Pienet biomit
+myst.symbol.biocontiled.name=Laatoitetut biomit
+myst.symbol.biocontiny.name=Hyvin pienet biomit
+myst.symbol.caves.name=Luolia
+myst.symbol.colorcloud.name=Pilvien väri
+myst.symbol.colorcloudnat.name=Luonnollinen pilvien väri
+myst.symbol.colorfog.name=Sumun väri
+myst.symbol.colorfognat.name=Luonnollinen sumun väri
+myst.symbol.colorfoliage.name=Lehvistön väri
+myst.symbol.colorfoliagenat.name=Luonnollinen lehvistön väri
+myst.symbol.colorgrass.name=Ruohon väri
+myst.symbol.colorgrassnat.name=Luonnollinen ruohon väri
+myst.symbol.colorhorizon.name=Auringonlaskun väri
+myst.symbol.colorsky.name=Taivaan väri
+myst.symbol.colorskynat.name=Luonnollinen taivaan väri
+myst.symbol.colorskynight.name=Yötaivaan väri
+myst.symbol.colorwater.name=Veden väri
+myst.symbol.colorwaternat.name=Luonnollinen veden väri
+myst.symbol.cryform.name=Kidemuodostelmia
+myst.symbol.denseores.name=Tiheät malmit
+myst.symbol.dungeons.name=Tyrmiä
+myst.symbol.envaccel.name=Kiihdytetty
+myst.symbol.envexplosions.name=Spontaani räjähtely
+myst.symbol.envlightning.name=Salamoita
+myst.symbol.envmeteor.name=Meteoreja
+myst.symbol.envscorch.name=Poltettu pinta
+myst.symbol.flat.name=Tasainen maailma
+myst.symbol.floatislands.name=Leijuvat saaret
+myst.symbol.genspikes.name=Piikkejä
+myst.symbol.hugetrees.name=Valtavia puita
+myst.symbol.lakesdeep.name=Syviä järviä
+myst.symbol.lakessurface.name=Pintajärviä
+myst.symbol.lightingbright.name=Kirkas valaistus
+myst.symbol.lightingdark.name=Pimeä valaistus
+myst.symbol.lightingnormal.name=Normaali valaistus
+myst.symbol.mineshafts.name=Kaivoskuiluja
+myst.symbol.modclear.name=Nollaa määritelmät
+myst.symbol.modgradient.name=Gradientti
+myst.symbol.moondark.name=Pimeä kuu
+myst.symbol.moonnormal.name=Normaali kuu
+myst.symbol.netherfort.name=Hornalinnoituksia
+myst.symbol.nohorizon.name=Ei horisonttia
+myst.symbol.nosea.name=Ei meriä
+myst.symbol.obelisks.name=Obeliskeja
+myst.symbol.pvpoff.name=Ei PvP:tä
+myst.symbol.rainbow.name=Sateenkaari
+myst.symbol.ravines.name=Rotkoja
+myst.symbol.skylands.name=Taivasmaat
+myst.symbol.starfissure.name=Tähtihalkeama
+myst.symbol.starsdark.name=Pimeät tähdet
+myst.symbol.starsendsky.name=Ender-tähdistö
+myst.symbol.starsnormal.name=Normaalit tähdet
+myst.symbol.starstwinkle.name=Tuikkivat tähdet
+myst.symbol.strongholds.name=Linnoituksia
+myst.symbol.sundark.name=Pimeä aurinko
+myst.symbol.sunnormal.name=Normaali aurinko
+myst.symbol.tendrils.name=Kärhiä
+myst.symbol.termodspheres.name=Palloja
+myst.symbol.terrainamplified.name=Vahvistettu normaali maailma
+myst.symbol.terrainend.name=Saarimaalima
+myst.symbol.terrainnether.name=Luolamaailma
+myst.symbol.terrainnormal.name=Tavallinen maailma
+myst.symbol.weathercloudy.name=Pilvinen sää
+myst.symbol.weatherfast.name=Nopea sää
+myst.symbol.weathernorm.name=Normaali sää
+myst.symbol.weatheroff.name=Ei säätä
+myst.symbol.weatheron.name=Ikuinen sää
+myst.symbol.weatherrain.name=Ikuinen sade
+myst.symbol.weatherslow.name=Hidas sää
+myst.symbol.weathersnow.name=Ikuinen lumisade
+myst.symbol.weatherstorm.name=Ikuinen myrsky
+myst.symbol.villages.name=Kyliä
+myst.symbol.void.name=Tyhjä maailma
