--- a/lang/fr_FR.lang
+++ b/lang/fr_FR.lang
@@ -58,81 +58,81 @@ achievement.myst.linkbook.desc=Fabriquer un Livre de lien. Bien, maintenant vous
 achievement.myst.quinn=Appellez-moi Quinn
 achievement.myst.quinn.desc=Voyager dans une dimension sans Livre de lien. Espérez qu'il y ai une sortie !
 
-myst.symbol.BioConHuge.name=Biomes Immense
-myst.symbol.BioConLarge.name=Grand Biomes
-myst.symbol.BioConMedium.name=Biomes Moyen
-myst.symbol.BioConNative.name=Controleur de Biome natif
-myst.symbol.BioConSingle.name=Biome Unique
-myst.symbol.BioConSmall.name=Petit Biomes
-myst.symbol.BioConTiled.name=Biomes Carrelés
-myst.symbol.BioConTiny.name=Biomes Minuscules
-myst.symbol.Caves.name=Cavernes
-myst.symbol.ColorCloud.name=Couleur du Ciel
-myst.symbol.ColorCloudNat.name=Couleur du Ciel Naturelle
-myst.symbol.ColorFog.name=Couleur du Brouillard
-myst.symbol.ColorFogNat.name=Couleur du Brouillard Naturelle
-myst.symbol.ColorFoliage.name=Couleur du Feuillage
-myst.symbol.ColorFoliageNat.name=Couleur du Feuillage Naturelle
-myst.symbol.ColorGrass.name=Couleur de l'herbe
-myst.symbol.ColorGrassNat.name=Couleur de l'herbe Naturelle
-myst.symbol.ColorHorizon.name=Couleur du Couché de Soleil
-myst.symbol.ColorSky.name=Couleur du Ciel
-myst.symbol.ColorSkyNat.name=Couleur du Ciel Naturelle
-myst.symbol.ColorSkyNight.name=Couleur du Ciel Nocturne
-myst.symbol.ColorWater.name=Couleur de l'eau
-myst.symbol.ColorWaterNat.name=Couleur de l'eau Naturelle
-myst.symbol.CryForm.name=Formations Cristallines
-myst.symbol.DenseOres.name=Minerais Denses
-myst.symbol.Dungeons.name=Donjons
-myst.symbol.EnvAccel.name=Acceléré
-myst.symbol.EnvExplosions.name=Explosions Spontanées
-myst.symbol.EnvLightning.name=Foudre
-myst.symbol.EnvMeteor.name=Météores
-myst.symbol.EnvScorch.name=Surface Brulante
-myst.symbol.Flat.name=Monde Plat
-myst.symbol.FloatIslands.name=Iles Flottantes
-myst.symbol.GenSpikes.name=Épines
-myst.symbol.HugeTrees.name=Grands Arbres
-myst.symbol.LakesDeep.name=Lacs des Pronfondeurs
-myst.symbol.LakesSurface.name=Lacs de Surface
-myst.symbol.LightingBright.name=Éclairage Important
-myst.symbol.LightingDark.name=Éclairage Faible
-myst.symbol.LightingNormal.name=Éclairage Normal
-myst.symbol.Mineshafts.name=Puits de mines
-myst.symbol.ModClear.name=Effacer les Modifications
-myst.symbol.ModGradient.name=Gradient
-myst.symbol.MoonDark.name=Lune Sombre
-myst.symbol.MoonNormal.name=Lune Normale
-myst.symbol.NetherFort.name=Forteresse du Nether
-myst.symbol.NoHorizon.name=Ciel Infini
-myst.symbol.NoSea.name=Pas de Mer
-myst.symbol.Obelisks.name=Obélisques
-myst.symbol.PvPOff.name=Anti-PvP
-myst.symbol.Rainbow.name=Arc-en-Ciel
-myst.symbol.Ravines.name=Ravines
-myst.symbol.Skylands.name=Mondes Aeriens
-myst.symbol.StarFissure.name=Fissure Stellaire
-myst.symbol.StarsDark.name=Étoiles Sombres
-myst.symbol.StarsEndSky.name=Ciel de l'Ender
-myst.symbol.StarsNormal.name=Étoiles Normales
-myst.symbol.StarsTwinkle.name=Étoiles Clignotantes
-myst.symbol.Strongholds.name=Forteresses
-myst.symbol.SunDark.name=Soleil Sombre
-myst.symbol.SunNormal.name=Soleil Normal
-myst.symbol.Tendrils.name=Vrilles
-myst.symbol.TerModSpheres.name=Spheres
-myst.symbol.TerrainAmplified.name=Monde Normal Amplifié
-myst.symbol.TerrainEnd.name=Monde Aquatique
-myst.symbol.TerrainNether.name=Monde Souterrain
-myst.symbol.TerrainNormal.name=Monde Classique
-myst.symbol.WeatherCloudy.name=Nuageux
-myst.symbol.WeatherFast.name=Météo Rapide
-myst.symbol.WeatherNorm.name=Météo Normale
-myst.symbol.WeatherOff.name=Sans Météo
-myst.symbol.WeatherOn.name=Météo Figée
-myst.symbol.WeatherRain.name=Pluie Eternelle
-myst.symbol.WeatherSlow.name=Météo Lente
-myst.symbol.WeatherSnow.name=Neige Eternelle
-myst.symbol.WeatherStorm.name=Tempete Eternelle
-myst.symbol.Villages.name=Villages
-myst.symbol.Void.name=Monde Vide
+myst.symbol.bioconhuge.name=Biomes Immense
+myst.symbol.bioconlarge.name=Grand Biomes
+myst.symbol.bioconmedium.name=Biomes Moyen
+myst.symbol.bioconnative.name=Controleur de Biome natif
+myst.symbol.bioconsingle.name=Biome Unique
+myst.symbol.bioconsmall.name=Petit Biomes
+myst.symbol.biocontiled.name=Biomes Carrelés
+myst.symbol.biocontiny.name=Biomes Minuscules
+myst.symbol.caves.name=Cavernes
+myst.symbol.colorcloud.name=Couleur du Ciel
+myst.symbol.colorcloudnat.name=Couleur du Ciel Naturelle
+myst.symbol.colorfog.name=Couleur du Brouillard
+myst.symbol.colorfognat.name=Couleur du Brouillard Naturelle
+myst.symbol.colorfoliage.name=Couleur du Feuillage
+myst.symbol.colorfoliagenat.name=Couleur du Feuillage Naturelle
+myst.symbol.colorgrass.name=Couleur de l'herbe
+myst.symbol.colorgrassnat.name=Couleur de l'herbe Naturelle
+myst.symbol.colorhorizon.name=Couleur du Couché de Soleil
+myst.symbol.colorsky.name=Couleur du Ciel
+myst.symbol.colorskynat.name=Couleur du Ciel Naturelle
+myst.symbol.colorskynight.name=Couleur du Ciel Nocturne
+myst.symbol.colorwater.name=Couleur de l'eau
+myst.symbol.colorwaternat.name=Couleur de l'eau Naturelle
+myst.symbol.cryform.name=Formations Cristallines
+myst.symbol.denseores.name=Minerais Denses
+myst.symbol.dungeons.name=Donjons
+myst.symbol.envaccel.name=Acceléré
+myst.symbol.envexplosions.name=Explosions Spontanées
+myst.symbol.envlightning.name=Foudre
+myst.symbol.envmeteor.name=Météores
+myst.symbol.envscorch.name=Surface Brulante
+myst.symbol.flat.name=Monde Plat
+myst.symbol.floatislands.name=Iles Flottantes
+myst.symbol.genspikes.name=Épines
+myst.symbol.hugetrees.name=Grands Arbres
+myst.symbol.lakesdeep.name=Lacs des Pronfondeurs
+myst.symbol.lakessurface.name=Lacs de Surface
+myst.symbol.lightingbright.name=Éclairage Important
+myst.symbol.lightingdark.name=Éclairage Faible
+myst.symbol.lightingnormal.name=Éclairage Normal
+myst.symbol.mineshafts.name=Puits de mines
+myst.symbol.modclear.name=Effacer les Modifications
+myst.symbol.modgradient.name=Gradient
+myst.symbol.moondark.name=Lune Sombre
+myst.symbol.moonnormal.name=Lune Normale
+myst.symbol.netherfort.name=Forteresse du Nether
+myst.symbol.nohorizon.name=Ciel Infini
+myst.symbol.nosea.name=Pas de Mer
+myst.symbol.obelisks.name=Obélisques
+myst.symbol.pvpoff.name=Anti-PvP
+myst.symbol.rainbow.name=Arc-en-Ciel
+myst.symbol.ravines.name=Ravines
+myst.symbol.skylands.name=Mondes Aeriens
+myst.symbol.starfissure.name=Fissure Stellaire
+myst.symbol.starsdark.name=Étoiles Sombres
+myst.symbol.starsendsky.name=Ciel de l'Ender
+myst.symbol.starsnormal.name=Étoiles Normales
+myst.symbol.starstwinkle.name=Étoiles Clignotantes
+myst.symbol.strongholds.name=Forteresses
+myst.symbol.sundark.name=Soleil Sombre
+myst.symbol.sunnormal.name=Soleil Normal
+myst.symbol.tendrils.name=Vrilles
+myst.symbol.termodspheres.name=Spheres
+myst.symbol.terrainamplified.name=Monde Normal Amplifié
+myst.symbol.terrainend.name=Monde Aquatique
+myst.symbol.terrainnether.name=Monde Souterrain
+myst.symbol.terrainnormal.name=Monde Classique
+myst.symbol.weathercloudy.name=Nuageux
+myst.symbol.weatherfast.name=Météo Rapide
+myst.symbol.weathernorm.name=Météo Normale
+myst.symbol.weatheroff.name=Sans Météo
+myst.symbol.weatheron.name=Météo Figée
+myst.symbol.weatherrain.name=Pluie Eternelle
+myst.symbol.weatherslow.name=Météo Lente
+myst.symbol.weathersnow.name=Neige Eternelle
+myst.symbol.weatherstorm.name=Tempete Eternelle
+myst.symbol.villages.name=Villages
+myst.symbol.void.name=Monde Vide
