--- a/lang/it_IT.lang
+++ b/lang/it_IT.lang
@@ -111,82 +111,82 @@ instability.bonus.troll.left=%s è uscito dall'era. La penalità di instabilità
 myst.symbol.biome.wrapper=Bioma %s
 myst.symbol.block.wrapper=Blocco %s
 
-myst.symbol.BioConGrid.name=Distribuzione a griglia dei biomi
-myst.symbol.BioConHuge.name=Distribuzione di biomi giganti
-myst.symbol.BioConLarge.name=Distribuzione di biomi grandi
-myst.symbol.BioConMedium.name=Distribuzione di biomi medi
-myst.symbol.BioConNative.name=Distribuzione nativo di biomi
-myst.symbol.BioConSingle.name=Distribuzione a bioma singolo
-myst.symbol.BioConSmall.name=Distribuzione di biomi piccoli
-myst.symbol.BioConTiled.name=Distribuzione a scacchiera dei biomi
-myst.symbol.BioConTiny.name=Distribuzione di biomi minuscoli
-myst.symbol.Caves.name=Caverne
-myst.symbol.ColorCloud.name=Colore delle nuvole
-myst.symbol.ColorCloudNat.name=Colore delle nuvole naturale
-myst.symbol.ColorFog.name=Colore della nebbia
-myst.symbol.ColorFogNat.name=Colore della nebbia naturale
-myst.symbol.ColorFoliage.name=Colore delle foglie
-myst.symbol.ColorFoliageNat.name=Colore delle foglie naturale
-myst.symbol.ColorGrass.name=Colore dell'erba
-myst.symbol.ColorGrassNat.name=Colore dell'erba naturale
-myst.symbol.ColorHorizon.name=Colore del tramonto
-myst.symbol.ColorSky.name=Colore del cielo
-myst.symbol.ColorSkyNat.name=Colore del cielo naturale
-myst.symbol.ColorSkyNight.name=Colore del cielo notturno
-myst.symbol.ColorWater.name=Colore dell'acqua
-myst.symbol.ColorWaterNat.name=Colore dell'acqua naturale
-myst.symbol.CryForm.name=Formazioni cristalline
-myst.symbol.DenseOres.name=Minerali densi
-myst.symbol.Dungeons.name=Dungeon
-myst.symbol.EnvAccel.name=Accelerato
-myst.symbol.EnvExplosions.name=Esplosioni spontanee
-myst.symbol.EnvLightning.name=Fulmini
-myst.symbol.EnvMeteor.name=Meteore
-myst.symbol.EnvScorch.name=Superficie bruciante
-myst.symbol.Flat.name=Mondo piatto
-myst.symbol.FloatIslands.name=Isole galleggianti
-myst.symbol.GenSpikes.name=Spuntoni
-myst.symbol.HugeTrees.name=Alberi giganti
-myst.symbol.LakesDeep.name=Laghi profondi
-myst.symbol.LakesSurface.name=Laghi superficiali
-myst.symbol.LightingBright.name=Illuminazione accesa
-myst.symbol.LightingDark.name=Illuminazione scura
-myst.symbol.LightingNormal.name=Illuminazione normale
-myst.symbol.Mineshafts.name=Miniere
-myst.symbol.ModClear.name=Eliminia modificatori
-myst.symbol.ModGradient.name=Pendenza
-myst.symbol.MoonDark.name=Luna scura
-myst.symbol.MoonNormal.name=Luna normale
-myst.symbol.NetherFort.name=Fortezze degl'Inferi
-myst.symbol.NoHorizon.name=Cielo senza confini
-myst.symbol.NoSea.name=Nessun mare
-myst.symbol.Obelisks.name=Obelischi
-myst.symbol.PvPOff.name=Anti-PvP
-myst.symbol.Rainbow.name=Arcobaleno
-myst.symbol.Ravines.name=Rovine
-myst.symbol.Skylands.name=Terre del cielo
-myst.symbol.StarFissure.name=Fessura nelle stelle
-myst.symbol.StarsDark.name=Stelle scure
-myst.symbol.StarsEndSky.name=Stelle dell'End
-myst.symbol.StarsNormal.name=Stelle normali
-myst.symbol.StarsTwinkle.name=Stelle scintillanti
-myst.symbol.Strongholds.name=Roccaforti
-myst.symbol.SunDark.name=Sole scuro
-myst.symbol.SunNormal.name=Sole normale
-myst.symbol.Tendrils.name=Viticci
-myst.symbol.TerModSpheres.name=Sfere
-myst.symbol.TerrainAmplified.name=Mondo amplificato
-myst.symbol.TerrainEnd.name=Mondo d'isole
-myst.symbol.TerrainNether.name=Mondo di caverne
-myst.symbol.TerrainNormal.name=Mondo normale
-myst.symbol.WeatherCloudy.name=Cielo coperto
-myst.symbol.WeatherFast.name=Tempo atmosferico veloce
-myst.symbol.WeatherNorm.name=Tempo atmosferico normale
-myst.symbol.WeatherOff.name=Nessun tempo atmosferico
-myst.symbol.WeatherOn.name=Tempo atmosferico eterno
-myst.symbol.WeatherRain.name=Pioggia eterna
-myst.symbol.WeatherSlow.name=Tempo atmosferico lento
-myst.symbol.WeatherSnow.name=Neve eterna
-myst.symbol.WeatherStorm.name=Tempesta eterna
-myst.symbol.Villages.name=Villaggi
-myst.symbol.Void.name=Mondo vuoto
+myst.symbol.biocongrid.name=Distribuzione a griglia dei biomi
+myst.symbol.bioconhuge.name=Distribuzione di biomi giganti
+myst.symbol.bioconlarge.name=Distribuzione di biomi grandi
+myst.symbol.bioconmedium.name=Distribuzione di biomi medi
+myst.symbol.bioconnative.name=Distribuzione nativo di biomi
+myst.symbol.bioconsingle.name=Distribuzione a bioma singolo
+myst.symbol.bioconsmall.name=Distribuzione di biomi piccoli
+myst.symbol.biocontiled.name=Distribuzione a scacchiera dei biomi
+myst.symbol.biocontiny.name=Distribuzione di biomi minuscoli
+myst.symbol.caves.name=Caverne
+myst.symbol.colorcloud.name=Colore delle nuvole
+myst.symbol.colorcloudnat.name=Colore delle nuvole naturale
+myst.symbol.colorfog.name=Colore della nebbia
+myst.symbol.colorfognat.name=Colore della nebbia naturale
+myst.symbol.colorfoliage.name=Colore delle foglie
+myst.symbol.colorfoliagenat.name=Colore delle foglie naturale
+myst.symbol.colorgrass.name=Colore dell'erba
+myst.symbol.colorgrassnat.name=Colore dell'erba naturale
+myst.symbol.colorhorizon.name=Colore del tramonto
+myst.symbol.colorsky.name=Colore del cielo
+myst.symbol.colorskynat.name=Colore del cielo naturale
+myst.symbol.colorskynight.name=Colore del cielo notturno
+myst.symbol.colorwater.name=Colore dell'acqua
+myst.symbol.colorwaternat.name=Colore dell'acqua naturale
+myst.symbol.cryform.name=Formazioni cristalline
+myst.symbol.denseores.name=Minerali densi
+myst.symbol.dungeons.name=Dungeon
+myst.symbol.envaccel.name=Accelerato
+myst.symbol.envexplosions.name=Esplosioni spontanee
+myst.symbol.envlightning.name=Fulmini
+myst.symbol.envmeteor.name=Meteore
+myst.symbol.envscorch.name=Superficie bruciante
+myst.symbol.flat.name=Mondo piatto
+myst.symbol.floatislands.name=Isole galleggianti
+myst.symbol.genspikes.name=Spuntoni
+myst.symbol.hugetrees.name=Alberi giganti
+myst.symbol.lakesdeep.name=Laghi profondi
+myst.symbol.lakessurface.name=Laghi superficiali
+myst.symbol.lightingbright.name=Illuminazione accesa
+myst.symbol.lightingdark.name=Illuminazione scura
+myst.symbol.lightingnormal.name=Illuminazione normale
+myst.symbol.mineshafts.name=Miniere
+myst.symbol.modclear.name=Eliminia modificatori
+myst.symbol.modgradient.name=Pendenza
+myst.symbol.moondark.name=Luna scura
+myst.symbol.moonnormal.name=Luna normale
+myst.symbol.netherfort.name=Fortezze degl'Inferi
+myst.symbol.nohorizon.name=Cielo senza confini
+myst.symbol.nosea.name=Nessun mare
+myst.symbol.obelisks.name=Obelischi
+myst.symbol.pvpoff.name=Anti-PvP
+myst.symbol.rainbow.name=Arcobaleno
+myst.symbol.ravines.name=Rovine
+myst.symbol.skylands.name=Terre del cielo
+myst.symbol.starfissure.name=Fessura nelle stelle
+myst.symbol.starsdark.name=Stelle scure
+myst.symbol.starsendsky.name=Stelle dell'End
+myst.symbol.starsnormal.name=Stelle normali
+myst.symbol.starstwinkle.name=Stelle scintillanti
+myst.symbol.strongholds.name=Roccaforti
+myst.symbol.sundark.name=Sole scuro
+myst.symbol.sunnormal.name=Sole normale
+myst.symbol.tendrils.name=Viticci
+myst.symbol.termodspheres.name=Sfere
+myst.symbol.terrainamplified.name=Mondo amplificato
+myst.symbol.terrainend.name=Mondo d'isole
+myst.symbol.terrainnether.name=Mondo di caverne
+myst.symbol.terrainnormal.name=Mondo normale
+myst.symbol.weathercloudy.name=Cielo coperto
+myst.symbol.weatherfast.name=Tempo atmosferico veloce
+myst.symbol.weathernorm.name=Tempo atmosferico normale
+myst.symbol.weatheroff.name=Nessun tempo atmosferico
+myst.symbol.weatheron.name=Tempo atmosferico eterno
+myst.symbol.weatherrain.name=Pioggia eterna
+myst.symbol.weatherslow.name=Tempo atmosferico lento
+myst.symbol.weathersnow.name=Neve eterna
+myst.symbol.weatherstorm.name=Tempesta eterna
+myst.symbol.villages.name=Villaggi
+myst.symbol.void.name=Mondo vuoto
