symbol names to lowercase

--- a/lang/la-la.lang
+++ b/lang/la-la.lang
@@ -1,4 +1,4 @@
-myst.profiling.running=Exspecta Segnitia (Percensens)
+﻿myst.profiling.running=Exspecta Segnitia (Percensens)
 myst.profiling.running.message=Mystcraft libum attorret.
 myst.profiling.complete=Clangere!
 myst.profiling.complete.message=Percensens Consummatus Est.
@@ -112,85 +112,85 @@ instability.bonus.troll.left=%s saeculum exivit.  Poena instabilitatis lente dif
 myst.symbol.biome.wrapper=%s Loca
 myst.symbol.block.wrapper=%s Cubus
 
-myst.symbol.BioConGrid.name=Scutulata Distributio Locorum
-myst.symbol.BioConHuge.name=Maxima Distributio Locorum
-myst.symbol.BioConLarge.name=Magna Distributio Locorum
-myst.symbol.BioConMedium.name=Media Distributio Locorum
-myst.symbol.BioConNative.name=Nativa Distributio Locorum
-myst.symbol.BioConSingle.name=Singula Distributio Locorum
-myst.symbol.BioConSmall.name=Paula Distributio Locorum
-myst.symbol.BioConTiled.name=Latericia Distributio Locorum
-myst.symbol.BioConTiny.name=Pusilla Distributio Locorum
-myst.symbol.Caves.name=Speluncae
-myst.symbol.ColorCloud.name=Color Nubili
-myst.symbol.ColorCloudNat.name=Color Nubili Nativus
-myst.symbol.ColorFog.name=Color Nebulae
-myst.symbol.ColorFogNat.name=Color Nebulae Nativus
-myst.symbol.ColorFoliage.name=Color Foliorum
-myst.symbol.ColorFoliageNat.name=Color Foliorum Nativus
-myst.symbol.ColorGrass.name=Color Graminis
-myst.symbol.ColorGrassNat.name=Color Graminis Nativus
-myst.symbol.ColorHorizon.name=Color Solis Occasus
-myst.symbol.ColorSky.name=Color Caeli
-myst.symbol.ColorSkyNat.name=Color Caeli Nativus
-myst.symbol.ColorSkyNight.name=Color Caeli Noctis
-myst.symbol.ColorWater.name=Color Aquae
-myst.symbol.ColorWaterNat.name=Color Aquae Nativus
-myst.symbol.CryForm.name=Formae Crystallorum
-myst.symbol.DenseOres.name=Aera Densa
-myst.symbol.Dungeons.name=Carceres
-myst.symbol.EnvAccel.name=Acceleratus
-myst.symbol.EnvExplosions.name=Fragores
-myst.symbol.EnvLightning.name=Fulmina
-myst.symbol.EnvMeteor.name=Cometae
-myst.symbol.EnvScorch.name=Incendens Superficiem
-myst.symbol.FeatureLargeDummy.name=Sine Magnis Proprietatibus
-myst.symbol.FeatureMediumDummy.name=Sine Mediis Proprietatibus
-myst.symbol.FeatureSmallDummy.name=Sine Paulis Proprietatibus
-myst.symbol.Flat.name=Saeculum Planum
-myst.symbol.FloatIslands.name=Insulae Volitantes
-myst.symbol.GenSpikes.name=Clavi Magni
-myst.symbol.HugeTrees.name=Arbores Ingentes
-myst.symbol.LakesDeep.name=Lacus Subterranei
-myst.symbol.LakesSurface.name=Lacus
-myst.symbol.LightingBright.name=Illuminatio Lucida
-myst.symbol.LightingDark.name=Illuminatio Obscura
-myst.symbol.LightingNormal.name=Illuminatio Nativa
-myst.symbol.Mineshafts.name=Fodinae
-myst.symbol.ModClear.name=Purga Immutatores Supervacui
-myst.symbol.ModGradient.name=Commisce Colores
-myst.symbol.MoonDark.name=Luna Obscura
-myst.symbol.MoonNormal.name=Luna Nativa
-myst.symbol.NetherFort.name=Castella Infernae
-myst.symbol.NoHorizon.name=Sine Orbe Finienti
-myst.symbol.NoSea.name=Sine Maribus
-myst.symbol.Obelisks.name=Obelisci
-myst.symbol.PvPOff.name=Interficiens Alii Lusores Vetitus Est
-myst.symbol.Rainbow.name=Arcus Caelestis
-myst.symbol.Ravines.name=Vallis Praerupta
-myst.symbol.Skylands.name=Terracaeli
-myst.symbol.StarFissure.name=Foramen Stellarum
-myst.symbol.StarsDark.name=Stellae Obscurae
-myst.symbol.StarsEndSky.name=Stellae Caeli Finalis 
-myst.symbol.StarsNormal.name=Stellae Nativae
-myst.symbol.StarsTwinkle.name=Stellae Micans
-myst.symbol.Strongholds.name=Arces
-myst.symbol.SunDark.name=Sol Obscurus
-myst.symbol.SunNormal.name=Sol Nativus
-myst.symbol.Tendrils.name=Pampinaria
-myst.symbol.TerModSpheres.name=Globi
-myst.symbol.TerrainAmplified.name=Saeculum Nativum Amplificatus
-myst.symbol.TerrainEnd.name=Saeculum Insulae Solitariae
-myst.symbol.TerrainNether.name=Saeculum Cavernarum
-myst.symbol.TerrainNormal.name=Saeculum Terrae Nativae
-myst.symbol.WeatherCloudy.name=Caelum Nubilum
-myst.symbol.WeatherFast.name=Caelum Rapidum
-myst.symbol.WeatherNorm.name=Caelum Natīvum
-myst.symbol.WeatherOff.name=Sine Caelo
-myst.symbol.WeatherOn.name=Caelum Aeternum
-myst.symbol.WeatherRain.name=Pluvia Aeterna
-myst.symbol.WeatherSlow.name=Caelum Segne
-myst.symbol.WeatherSnow.name=Nix Aeterna
-myst.symbol.WeatherStorm.name=Tempestates Aeternae
-myst.symbol.Villages.name=Oppida
-myst.symbol.Void.name=Saeculum Vacuitatis
+myst.symbol.biocongrid.name=Scutulata Distributio Locorum
+myst.symbol.bioconhuge.name=Maxima Distributio Locorum
+myst.symbol.bioconlarge.name=Magna Distributio Locorum
+myst.symbol.bioconmedium.name=Media Distributio Locorum
+myst.symbol.bioconnative.name=Nativa Distributio Locorum
+myst.symbol.bioconsingle.name=Singula Distributio Locorum
+myst.symbol.bioconsmall.name=Paula Distributio Locorum
+myst.symbol.biocontiled.name=Latericia Distributio Locorum
+myst.symbol.biocontiny.name=Pusilla Distributio Locorum
+myst.symbol.caves.name=Speluncae
+myst.symbol.colorcloud.name=Color Nubili
+myst.symbol.colorcloudnat.name=Color Nubili Nativus
+myst.symbol.colorfog.name=Color Nebulae
+myst.symbol.colorfognat.name=Color Nebulae Nativus
+myst.symbol.colorfoliage.name=Color Foliorum
+myst.symbol.colorfoliagenat.name=Color Foliorum Nativus
+myst.symbol.colorgrass.name=Color Graminis
+myst.symbol.colorgrassnat.name=Color Graminis Nativus
+myst.symbol.colorhorizon.name=Color Solis Occasus
+myst.symbol.colorsky.name=Color Caeli
+myst.symbol.colorskynat.name=Color Caeli Nativus
+myst.symbol.colorskynight.name=Color Caeli Noctis
+myst.symbol.colorwater.name=Color Aquae
+myst.symbol.colorwaternat.name=Color Aquae Nativus
+myst.symbol.cryform.name=Formae Crystallorum
+myst.symbol.denseores.name=Aera Densa
+myst.symbol.dungeons.name=Carceres
+myst.symbol.envaccel.name=Acceleratus
+myst.symbol.envexplosions.name=Fragores
+myst.symbol.envlightning.name=Fulmina
+myst.symbol.envmeteor.name=Cometae
+myst.symbol.envscorch.name=Incendens Superficiem
+myst.symbol.featurelargedummy.name=Sine Magnis Proprietatibus
+myst.symbol.featuremediumdummy.name=Sine Mediis Proprietatibus
+myst.symbol.featuresmalldummy.name=Sine Paulis Proprietatibus
+myst.symbol.flat.name=Saeculum Planum
+myst.symbol.floatislands.name=Insulae Volitantes
+myst.symbol.genspikes.name=Clavi Magni
+myst.symbol.hugetrees.name=Arbores Ingentes
+myst.symbol.lakesdeep.name=Lacus Subterranei
+myst.symbol.lakessurface.name=Lacus
+myst.symbol.lightingbright.name=Illuminatio Lucida
+myst.symbol.lightingdark.name=Illuminatio Obscura
+myst.symbol.lightingnormal.name=Illuminatio Nativa
+myst.symbol.mineshafts.name=Fodinae
+myst.symbol.modclear.name=Purga Immutatores Supervacui
+myst.symbol.modgradient.name=Commisce Colores
+myst.symbol.moondark.name=Luna Obscura
+myst.symbol.moonnormal.name=Luna Nativa
+myst.symbol.netherfort.name=Castella Infernae
+myst.symbol.nohorizon.name=Sine Orbe Finienti
+myst.symbol.nosea.name=Sine Maribus
+myst.symbol.obelisks.name=Obelisci
+myst.symbol.pvpoff.name=Interficiens Alii Lusores Vetitus Est
+myst.symbol.rainbow.name=Arcus Caelestis
+myst.symbol.ravines.name=Vallis Praerupta
+myst.symbol.skylands.name=Terracaeli
+myst.symbol.starfissure.name=Foramen Stellarum
+myst.symbol.starsdark.name=Stellae Obscurae
+myst.symbol.starsendsky.name=Stellae Caeli Finalis 
+myst.symbol.starsnormal.name=Stellae Nativae
+myst.symbol.starstwinkle.name=Stellae Micans
+myst.symbol.strongholds.name=Arces
+myst.symbol.sundark.name=Sol Obscurus
+myst.symbol.sunnormal.name=Sol Nativus
+myst.symbol.tendrils.name=Pampinaria
+myst.symbol.termodspheres.name=Globi
+myst.symbol.terrainamplified.name=Saeculum Nativum Amplificatus
+myst.symbol.terrainend.name=Saeculum Insulae Solitariae
+myst.symbol.terrainnether.name=Saeculum Cavernarum
+myst.symbol.terrainnormal.name=Saeculum Terrae Nativae
+myst.symbol.weathercloudy.name=Caelum Nubilum
+myst.symbol.weatherfast.name=Caelum Rapidum
+myst.symbol.weathernorm.name=Caelum Natīvum
+myst.symbol.weatheroff.name=Sine Caelo
+myst.symbol.weatheron.name=Caelum Aeternum
+myst.symbol.weatherrain.name=Pluvia Aeterna
+myst.symbol.weatherslow.name=Caelum Segne
+myst.symbol.weathersnow.name=Nix Aeterna
+myst.symbol.weatherstorm.name=Tempestates Aeternae
+myst.symbol.villages.name=Oppida
+myst.symbol.void.name=Saeculum Vacuitatis
